Fix tile visual bugs: overflow and spacing (#18)
- Fixed tile name truncation using min-width on .iui-content
- Fixed metadata not staying at the bottom using margin-top: auto
- Fixed metadata hiding even in absence of options menu by using :last-child selector
- Fixed IE fallback in iui-line-clamp mixin

--- a/src/style/mixins.scss
+++ b/src/style/mixins.scss
@@ -106,13 +106,13 @@
 
 @mixin iui-line-clamp($lines: 1) {
   overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+
   @supports(-webkit-line-clamp: 1) {
+    white-space: unset;
     display: -webkit-box; /* stylelint-disable-line */
     -webkit-line-clamp: $lines;
     -webkit-box-orient: vertical; /* stylelint-disable-line */
-  }
-  @supports not (-webkit-line-clamp: 1) {
-    white-space: nowrap;
-    text-overflow: ellipsis;
   }
 }
